--- a/hardware/arm/Nuvoton/libraries/DallasTemperature/library.properties
+++ b/hardware/arm/Nuvoton/libraries/DallasTemperature/library.properties
@@ -8,3 +8,4 @@ category=Communication
 url=http://www.pjrc.com/teensy/td_libs_OneWire.html
 architectures=Nuvoton
 types=Nuvoton
+includes=DallasTemperature.h
