--- a/hardware/arm/Nuvoton/libraries/FreeRTOS/library.properties
+++ b/hardware/arm/Nuvoton/libraries/FreeRTOS/library.properties
@@ -8,7 +8,8 @@ paragraph=
 url=
 category=Timing
 core-dependencies=arm (>=1.6.0)
-types=GEOKO
+dependencies=
+types=Nuvoton
 architectures=Nuvoton
 includes=FreeRTOS.h
 
