--- a/hardware/arm/Nuvoton/libraries/LCD_Panel/library.properties
+++ b/hardware/arm/Nuvoton/libraries/LCD_Panel/library.properties
@@ -6,6 +6,8 @@ sentence=NANO100 LCD Panel class for arduino..
 paragraph=for Nuvoton
 category=Communication
 url=http://www.arduino.cc/en/Reference/Wire
+core-dependencies=arm (>=1.6.0)
+dependencies=
 architectures=Nuvoton
 includes=LCD_Panel.h
 types=Nuvoton
