--- a/hardware/arm/Nuvoton/libraries/OneWire/library.properties
+++ b/hardware/arm/Nuvoton/libraries/OneWire/library.properties
@@ -6,5 +6,8 @@ sentence=Access 1-wire temperature sensors, memory and other chips.
 paragraph=
 category=Communication
 url=http://www.pjrc.com/teensy/td_libs_OneWire.html
+core-dependencies=arm (>=1.6.0)
+dependencies=
 architectures=Nuvoton
 types=Nuvoton
+includes=OneWire.h
