--- a/hardware/arm/Nuvoton/libraries/SPIFlash/library.properties
+++ b/hardware/arm/Nuvoton/libraries/SPIFlash/library.properties
@@ -6,6 +6,7 @@ sentence=SpiFlash library v17.6.28
 paragraph=
 category=Data Storage
 url=
+core-dependencies=arm (>=1.6.0)
 architectures=Nuvoton
 types=Nuvoton
 dependencies=SPI
